--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Refonte Shihtzu</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <h1>Hello World !</h1>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
