--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <body class="bg-bgColor text-body h-[80vh]">
     <div
       id="navbar"
-      class="sticky top-0"
-      style="z-index: 1000 !important"
+      style="
+        z-index: 1000 !important;
+        position: sticky !important;
+        top: 0 !important;
+      "
     ></div>
     <main class="p-4 md:p-8 lg:p-12" id="app"></main>
     <script src="src/components/navbar.components.js"></script>
