--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="icon" href="src/img/favicon-shihtzu.png" type="image/png" />
   </head>
-  <body class="bg-bgColor text-body h-[80vh]">
+  <body class="bg-bgColor text-body">
     <div
       id="navbar"
       style="
@@ -24,7 +24,7 @@
         top: 0 !important;
       "
     ></div>
-    <main class="p-4 md:p-8 lg:p-12" id="app"></main>
+    <main id="app"></main>
     <script src="src/components/navbar.components.js"></script>
     <script type="module" src="src/js/app.js"></script>
   </body>
