--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Shihtzu</title>
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
@@ -16,6 +17,7 @@
     <link rel="icon" href="src/img/favicon-shihtzu.png" type="image/png" />
   </head>
   <body class="bg-bgColor text-body">
+    <div id="warning"></div>
     <div
       id="navbar"
       style="
@@ -24,8 +26,324 @@
         top: 0 !important;
       "
     ></div>
-    <main id="app"></main>
+    <main>
+      <section id="hero" class="px-4 md:px-8 lg:px-12">
+        <div
+          class="flex flex-1 w-full flex-col items-center justify-center text-center px-4 py-20 rounded-xl h-[80vh]"
+          style="
+            background-image: url('src/img/gradient-hero.webp');
+            background-size: cover;
+            background-position: center;
+          "
+        >
+          <a
+            href="/contact.html"
+            class="flex items-center border border-body rounded-lg py-2 px-4 hover:bg-body text-body hover:text-accent text-sm mb-5 transition duration-300 ease-in-out"
+          >
+            Nous contacter
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              class="w-4 h-4 ml-2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25"
+              />
+            </svg>
+          </a>
+          <h1
+            class="mx-auto max-w-4xl font-display text-5xl font-bold tracking-normal text-body sm:text-7xl"
+          >
+            Passez le pas, <br />et adoptez
+            <span class="relative whitespace-nowrap text-bgColor">
+              <svg
+                aria-hidden="true"
+                viewBox="0 0 418 42"
+                class="absolute top-2/3 left-0 h-[0.58em] w-full fill-primary"
+                preserveAspectRatio="none"
+              >
+                <path
+                  d="M203.371.916c-26.013-2.078-76.686 1.963-124.73 9.946L67.3 12.749C35.421 18.062 18.2 21.766 6.004 25.934 1.244 27.561.828 27.778.874 28.61c.07 1.214.828 1.121 9.595-1.176 9.072-2.377 17.15-3.92 39.246-7.496C123.565 7.986 157.869 4.492 195.942 5.046c7.461.108 19.25 1.696 19.17 2.582-.107 1.183-7.874 4.31-25.75 10.366-21.992 7.45-35.43 12.534-36.701 13.884-2.173 2.308-.202 4.407 4.442 4.734 2.654.187 3.263.157 15.593-.780 35.401-2.686 57.944-3.488 88.365-3.143 46.327.526 75.721 2.23 130.788 7.584 19.787 1.924 20.814 1.98 24.557 1.332l.066-.011c1.201-.203 1.53-1.825.399-2.335-2.911-1.31-4.893-1.604-22.048-3.261-57.509-5.556-87.871-7.36-132.059-7.842-23.239-.254-33.617-.116-50.627.674-11.629.540-42.371 2.494-46.696 2.967-2.359.259 8.133-3.625 26.504-9.810 23.239-7.825 27.934-10.149 28.304-14.005.417-4.348-3.529-6-16.878-7.066Z"
+                ></path>
+              </svg>
+              <span class="relative">un chiot !</span>
+            </span>
+          </h1>
+          <h2
+            class="mx-auto mt-12 max-w-xl text-lg sm:text-bodyGray text-bodyGray leading-7"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </h2>
+          <a
+            class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
+            href=""
+            >Adopter un chiot</a
+          >
+        </div>
+      </section>
+
+      <section id="staff" class="p-4 md:p-8 lg:p-12">
+        <div class="flex items-center justify-center min-h-screen">
+          <div class="flex flex-col">
+            <div class="flex flex-col mt-8">
+              <div class="container max-w-7xl px-4">
+                <div class="flex flex-wrap justify-center text-center mb-16">
+                  <div class="w-full lg:w-6/12 px-4">
+                    <h1 class="text-gray-900 text-4xl font-bold mb-8">
+                      Rencontrez l'équipe
+                    </h1>
+                    <p class="text-gray-700 text-lg font-light">
+                      Mme Monique DURUPT Aurélie et sa fille Mme Aurélie
+                      FEUERSTEIN vous attendent à leur élevage.
+                    </p>
+                  </div>
+                </div>
+                <!-- Team Members -->
+                <div class="flex flex-wrap justify-center">
+                  <!-- Member #1 -->
+                  <div
+                    class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4"
+                  >
+                    <div class="flex flex-col">
+                      <!-- Avatar -->
+                      <a href="#" class="mx-auto"
+                        ><img
+                          class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                          src="src/img/monique.jpg"
+                          alt="Monique DURUPT"
+                      /></a>
+                      <!-- Details -->
+                      <div class="text-center mt-6">
+                        <!-- Name -->
+                        <h1 class="text-gray-900 text-xl font-bold mb-1">
+                          Monique DURUPT
+                        </h1>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Member #2 -->
+                  <div
+                    class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4"
+                  >
+                    <div class="flex flex-col">
+                      <!-- Avatar -->
+                      <a href="#" class="mx-auto"
+                        ><img
+                          class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                          src="src/img/aurelie.jpeg"
+                          alt="Aurélie FEUERSTEIN"
+                      /></a>
+                      <!-- Details -->
+                      <div class="text-center mt-6">
+                        <!-- Name -->
+                        <h1 class="text-gray-900 text-xl font-bold mb-1">
+                          Aurélie FEUERSTEIN
+                        </h1>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="conseils" class="p-4 md:p-8 lg:p-12">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <h2
+            class="font-manrope text-4xl font-bold text-body text-center mb-14"
+          >
+            Nos conseils avant d'adopter
+          </h2>
+          <div
+            class="flex justify-center mb-14 gap-y-8 lg:gap-y-0 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8"
+          >
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="src/img/education-chiot.jpg"
+                  class="rounded-lg w-full aspect-[16/9] object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Éduquer un chiot
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">10/1927</span>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="https://pagedone.io/asset/uploads/1696244579.png"
+                  class="rounded-lg w-full aspect-[16/9] object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Éducation à la propreté
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">04/1885</span>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="https://pagedone.io/asset/uploads/1696244619.png"
+                  class="rounded-lg w-full aspect-[16/9]object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Gamelle en Plastique ou Inox ?
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">02/1362</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a
+            href="/blog.html"
+            class="cursor-pointer bg-accent shadow-sm rounded-xl py-3.5 px-7 w-52 flex justify-center items-center text-bgColor font-semibold mx-auto transition-all duration-300 hover:bg-accentHover"
+            >Tout Voir</a
+          >
+        </div>
+      </section>
+
+      <section id="swiper" class="p-4 md:p-8 lg:p-12">
+        <div class="overflow-hidden">
+          <div class="flex flex-wrap justify-center text-center mb-16">
+            <div class="w-full lg:w-6/12 px-4">
+              <h1 class="text-gray-900 text-4xl font-bold mb-8">
+                Nos fidèles amis à quatre pattes
+              </h1>
+              <p class="text-gray-700 text-lg font-light">
+                La caniche Myrtille, la Chihuahua Ombline et les quatre Shih
+                tzus des webmasters vous souhaitent une bonne navigation dans ce
+                site.
+              </p>
+            </div>
+          </div>
+          <!--Slider Wrapper-->
+          <div class="mx-auto w-auto relative">
+            <button
+              id="slider-button-left"
+              class="absolute left-0 top-1/2 -translate-y-1/2 swiper-button-prev w-11 h-11 p-3 xl:flex hidden shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] items-center justify-center border border-primary rounded-xl group hover:bg-primaryHover transition-all duration-300 ease-in-out"
+            >
+              <svg
+                class="text-primary group-hover:text-white"
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+              >
+                <path
+                  d="M12.5002 14.9999L7.50005 9.99973L12.5032 4.99658"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+            <div
+              class="swiper-container gallery-top w-full md:w-[1028px] mx-auto xl:overflow-hidden pt-6"
+            >
+              <div class="swiper-wrapper w-max mx-auto mb-5 flex gap-3">
+                <div class="swiper-slide max-w-[319px] grid">
+                  <div class="relative w-full pt-[100%]">
+                    <img
+                      class="absolute top-0 left-0 w-full h-full rounded-xl object-cover"
+                      src="src/img/ombline.jpg"
+                    />
+                  </div>
+                </div>
+                <div class="swiper-slide max-w-[319px] grid">
+                  <div class="relative w-full pt-[100%]">
+                    <img
+                      class="absolute top-0 left-0 w-full h-full rounded-xl object-cover"
+                      src="src/img/myrtille.jpg"
+                    />
+                  </div>
+                </div>
+                <div class="swiper-slide max-w-[319px] grid">
+                  <div class="relative w-full pt-[100%]">
+                    <img
+                      class="absolute top-0 left-0 w-full h-full rounded-xl object-cover"
+                      src="src/img/4dogs.jpg"
+                    />
+                  </div>
+                </div>
+                <div class="swiper-slide max-w-[319px] grid">
+                  <div class="relative w-full pt-[100%]">
+                    <img
+                      class="absolute top-0 left-0 w-full h-full rounded-xl object-cover"
+                      src="src/img/ondine.jpg"
+                    />
+                  </div>
+                </div>
+              </div>
+              <button
+                id="slider-button-right"
+                class="absolute right-0 top-1/2 -translate-y-1/2 swiper-button-next w-11 h-11 p-3 xl:flex hidden shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] items-center justify-center border border-primary rounded-xl group transition-all duration-300 ease-in-out hover:bg-primaryHover"
+              >
+                <svg
+                  class="text-primary group-hover:text-bgColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                >
+                  <path
+                    d="M7.50301 4.99637L12.5032 9.99657L7.50006 14.9997"
+                    stroke="currentColor"
+                    stroke-width="1.6"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div id="app"></div>
+    </main>
+    <footer id="footer"></footer>
+    <script
+      src="https://website-widgets.pages.dev/dist/sienna.min.js"
+      defer
+    ></script>
     <script src="src/components/navbar.components.js"></script>
+    <script src="src/components/warning.components.js"></script>
+    <script src="src/components/footer.components.js"></script>
+    <script src="src/components/swiper.components.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
     <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
