--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         top: 0 !important;
       "
     ></div>
-    <main class="p-4 md:p-8 lg:p-12">
-      <section id="hero">
+    <main>
+      <section id="hero" class="px-4 md:px-8 lg:px-12">
         <div
           class="flex flex-1 w-full flex-col items-center justify-center text-center px-4 py-20 rounded-xl h-[80vh]"
           style="
