--- a/blog.html
+++ b/blog.html
@@ -62,13 +62,177 @@
           </h2>
           <a
             class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
-            href=""
+            href="#conseils"
             >Découvrir</a
           >
         </div>
       </section>
+
+      <section id="conseils" class="my-48">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <h2 class="text-4xl font-bold text-body text-center mb-14">
+            Nos conseils avant d'adopter
+          </h2>
+          <div
+            id="blog"
+            class="flex justify-center mb-8 gap-y-8 lg:gap-y-0 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8"
+          >
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent hover:shadow-lg"
+            >
+              <a href="article1.html">
+                <div class="flex items-center mb-6 rounded-lg overflow-hidden">
+                  <img
+                    src="src/img/blog-education.jpg"
+                    class="w-full aspect-[16/9] object-cover transition-transform duration-300 ease-in-out group-hover:scale-125 group-hover:rotate-3"
+                  />
+                </div>
+                <div class="block">
+                  <h4 class="text-body font-medium leading-8 mb-9">
+                    Éduquer un chiot
+                  </h4>
+                  <div class="flex items-center justify-between font-medium">
+                    <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                    <span class="text-sm text-accent">10/2024</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent hover:shadow-lg"
+            >
+              <a href="article2.html">
+                <div class="flex items-center mb-6 rounded-lg overflow-hidden">
+                  <img
+                    src="src/img/blog-proprete.jpg"
+                    class="w-full aspect-[16/9] object-cover transition-transform duration-300 ease-in-out group-hover:scale-125 group-hover:rotate-3"
+                  />
+                </div>
+                <div class="block">
+                  <h4 class="text-body font-medium leading-8 mb-9">
+                    Éducation à la propreté
+                  </h4>
+                  <div class="flex items-center justify-between font-medium">
+                    <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                    <span class="text-sm text-accent">04/2024</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div
+              class="group cursor-pointer w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent hover:shadow-lg"
+            >
+              <a href="article3.html">
+                <div class="flex items-center mb-6 rounded-lg overflow-hidden">
+                  <img
+                    src="src/img/blog-gamelle.jpg"
+                    class="w-full aspect-[16/9] object-cover transition-transform duration-300 ease-in-out group-hover:scale-125 group-hover:rotate-3"
+                  />
+                </div>
+                <div class="block">
+                  <h4 class="text-body font-medium leading-8 mb-9">
+                    Gamelle en Plastique ou Inox ?
+                  </h4>
+                  <div class="flex items-center justify-between font-medium">
+                    <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                    <span class="text-sm text-accent">02/2024</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div
+            id="coming-soon"
+            class="flex justify-center mb-8 gap-y-8 lg:gap-y-0 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8"
+          >
+            <div
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="src/img/blog-education.jpg"
+                  class="rounded-lg w-full aspect-[16/9] object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Éduquer un chiot
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">10/2024</span>
+                </div>
+              </div>
+              <div
+                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+              ></div>
+              <span
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+              >
+                Bientôt disponible
+              </span>
+            </div>
+            <div
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="src/img/blog-education.jpg"
+                  class="rounded-lg w-full aspect-[16/9] object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Éduquer un chiot
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">10/2024</span>
+                </div>
+              </div>
+              <div
+                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+              ></div>
+              <span
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+              >
+                Bientôt disponible
+              </span>
+            </div>
+            <div
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+            >
+              <div class="flex items-center mb-6">
+                <img
+                  src="src/img/blog-education.jpg"
+                  class="rounded-lg w-full aspect-[16/9] object-cover"
+                />
+              </div>
+              <div class="block">
+                <h4 class="text-body font-medium leading-8 mb-9">
+                  Éduquer un chiot
+                </h4>
+                <div class="flex items-center justify-between font-medium">
+                  <h6 class="text-sm text-bodyGray">Par les webmasters</h6>
+                  <span class="text-sm text-accent">10/2024</span>
+                </div>
+              </div>
+              <div
+                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+              ></div>
+              <span
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+              >
+                Bientôt disponible
+              </span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer" class="mt-12"></footer>
     <script
       src="https://website-widgets.pages.dev/dist/sienna.min.js"
       defer
