Ajout d'un formulaire de contact sur la page contact

--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,153 @@
           </h2>
           <a
             class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
-            href=""
+            href="#contact-section"
             >Nous contacter</a
           >
         </div>
       </section>
+      <section id="contact-section" class="py-24">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="grid lg:grid-cols-2 grid-cols-1 gap-x-24">
+            <div class="flex items-center lg:mb-0 mb-10">
+              <div class="">
+                <h4
+                  class="text-primary text-base font-medium leading-6 mb-4 lg:text-left text-center"
+                >
+                  Nous contacter
+                </h4>
+                <h2
+                  class="text-gray-900 text-4xl font-semibold leading-10 mb-9 lg:text-left text-center"
+                >
+                  Contactez-nous
+                </h2>
+                <form action="#">
+                  <input
+                    type="text"
+                    class="w-full h-14 shadow-sm text-gray-600 placeholder-text-400 text-lg font-normal leading-7 rounded-full border border-gray-200 focus:outline-none py-2 px-4 mb-8"
+                    placeholder="Nom"
+                  />
+                  <input
+                    type="email"
+                    class="w-full h-14 shadow-sm text-gray-600 placeholder-text-400 text-lg font-normal leading-7 rounded-full border border-gray-200 focus:outline-none py-2 px-4 mb-8"
+                    placeholder="Email"
+                  />
+                  <textarea
+                    name=""
+                    id="text"
+                    class="w-full h-48 shadow-sm resize-none text-gray-600 placeholder-text-400 text-lg font-normal leading-7 rounded-2xl border border-gray-200 focus:outline-none px-4 py-4 mb-8"
+                    placeholder="Votre message"
+                  ></textarea>
+                  <button
+                    class="w-full h-12 text-center text-bgColor text-base font-semibold leading-6 rounded-full bg-primary shadow transition-all duration-700 hover:bg-primaryHover"
+                  >
+                    Envoyer
+                  </button>
+                </form>
+              </div>
+            </div>
+            <div
+              class="lg:max-w-xl w-full h-[600px] rounded-xl flex items-center justify-center bg-cover bg-no-repeat bg-[url('src/img/gradient-hero2.jpg')]"
+            >
+              <div>
+                <div
+                  class="lg:w-96 w-auto h-auto rounded-xl bg-bgColor shadow-xl lg:p-6 p-4"
+                >
+                  <a href="/"
+                    ><img
+                      src="src/img/logo-black.svg"
+                      width="200"
+                      class="mx-auto mb-12"
+                  /></a>
+                  <a href="tel:0633087438" class="flex items-center mb-6 group">
+                    <svg
+                      width="30"
+                      height="30"
+                      viewBox="0 0 30 30"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="stroke-body group-hover:stroke-primary transition duration-300"
+                    >
+                      <path
+                        d="M22.3092 18.3098C22.0157 18.198 21.8689 18.1421 21.7145 18.1287C21.56 18.1154 21.4058 18.1453 21.0975 18.205L17.8126 18.8416C17.4392 18.9139 17.2525 18.9501 17.0616 18.9206C16.8707 18.891 16.7141 18.8058 16.4008 18.6353C13.8644 17.2551 12.1853 15.6617 11.1192 13.3695C10.9964 13.1055 10.935 12.9735 10.9133 12.8017C10.8917 12.6298 10.9218 12.4684 10.982 12.1456L11.6196 8.72559C11.6759 8.42342 11.7041 8.27233 11.6908 8.12115C11.6775 7.96998 11.6234 7.82612 11.5153 7.5384L10.6314 5.18758C10.37 4.49217 10.2392 4.14447 9.95437 3.94723C9.6695 3.75 9.29804 3.75 8.5551 3.75H5.85778C4.58478 3.75 3.58264 4.8018 3.77336 6.06012C4.24735 9.20085 5.64674 14.8966 9.73544 18.9853C14.0295 23.2794 20.2151 25.1426 23.6187 25.884C24.9335 26.1696 26.0993 25.1448 26.0993 23.7985V21.2824C26.0993 20.5428 26.0993 20.173 25.9034 19.8888C25.7076 19.6046 25.362 19.4729 24.6708 19.2096L22.3092 18.3098Z"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                    <h5
+                      class="text-body group-hover:text-primary transition duration-300 text-base font-normal leading-6 ml-5"
+                    >
+                      06 33 08 74 38
+                    </h5>
+                  </a>
+
+                  <a href="javascript:;" class="flex items-center mb-6 group">
+                    <svg
+                      width="30"
+                      height="30"
+                      viewBox="0 0 30 30"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="stroke-body group-hover:stroke-primary transition duration-300"
+                    >
+                      <path
+                        d="M25 12.9169C25 17.716 21.1939 21.5832 18.2779 24.9828C16.8385 26.6609 16.1188 27.5 15 27.5C13.8812 27.5 13.1615 26.6609 11.7221 24.9828C8.80612 21.5832 5 17.716 5 12.9169C5 10.1542 6.05357 7.5046 7.92893 5.55105C9.8043 3.59749 12.3478 2.5 15 2.5C17.6522 2.5 20.1957 3.59749 22.0711 5.55105C23.9464 7.5046 25 10.1542 25 12.9169Z"
+                        stroke-width="2"
+                      ></path>
+                      <path
+                        d="M17.5 11.6148C17.5 13.0531 16.3807 14.219 15 14.219C13.6193 14.219 12.5 13.0531 12.5 11.6148C12.5 10.1765 13.6193 9.01058 15 9.01058C16.3807 9.01058 17.5 10.1765 17.5 11.6148Z"
+                        stroke-width="2"
+                      ></path>
+                    </svg>
+                    <h5
+                      class="text-body group-hover:text-primary transition duration-300 text-base font-normal leading-6 ml-5"
+                    >
+                      7 Route de Nitting, 57400 Hesse
+                    </h5>
+                  </a>
+                  <div
+                    class="flex items-center justify-center border-t border-gray-100 pt-6"
+                  >
+                    <a
+                      href="https://www.facebook.com/p/Les-Poupons-Fris%C3%A9s-100046874123441/"
+                      target="_blank"
+                      class="flex items-center mr-6 group"
+                    >
+                      <svg
+                        width="31"
+                        height="30"
+                        viewBox="0 0 31 30"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <rect
+                          x="0.0683594"
+                          width="30"
+                          height="30"
+                          rx="15"
+                          fill="#CB7F36"
+                        ></rect>
+                        <path
+                          d="M18.5094 15.937L18.9369 13.2236H16.3038V11.4599C16.3038 10.7179 16.6714 9.99293 17.8469 9.99293H19.0608V7.68231C18.3539 7.56968 17.6396 7.50874 16.9236 7.5C14.7565 7.5 13.3417 8.80158 13.3417 11.1546V13.2236H10.9395V15.937H13.3417V22.5H16.3038V15.937H18.5094Z"
+                          fill="white"
+                        ></path>
+                      </svg>
+                      <h5
+                        class="text-body group-hover:text-primary duration-300 transition text-base font-normal leading-6 ml-3"
+                      >
+                        Facebook
+                      </h5>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer" class="mt-12"></footer>
     <script
       src="https://website-widgets.pages.dev/dist/sienna.min.js"
       defer
