--- a/pension.html
+++ b/pension.html
@@ -62,13 +62,81 @@
           </h2>
           <a
             class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
-            href=""
+            href="#pension-section"
             >Découvrir</a
           >
         </div>
       </section>
+
+      <section id="pension-section" class="py-24">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="grid gap-2.5 lg:pb-16 pb-10">
+            <h2
+              class="w-full text-center text-gray-900 text-4xl font-bold leading-normal"
+            >
+              Découvrir la pension
+            </h2>
+            <div
+              class="w-full text-center text-gray-600 text-lg font-normal leading-8"
+            >
+              Découvrez nos adorables chiots
+            </div>
+          </div>
+          <div class="gallery">
+            <div class="flex flex-col mb-10">
+              <div class="grid md:grid-cols-12 gap-8 lg:mb-11 mb-7">
+                <div
+                  class="md:col-span-4 md:h-[404px] h-[277px] w-full rounded-3xl"
+                >
+                  <img
+                    src="src/img/blog-proprete.jpg"
+                    alt="Gallery image"
+                    class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-300 ease-in-out mx-auto lg:col-span-4 md:col-span-6 w-full h-full"
+                  />
+                </div>
+                <div
+                  class="md:col-span-8 md:h-[404px] h-[277px] w-full rounded-3xl"
+                >
+                  <img
+                    src="src/img/blog-article1.jpg"
+                    alt="Gallery image"
+                    class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-300 ease-in-out mx-auto lg:col-span-8 md:col-span-6 w-full h-full"
+                  />
+                </div>
+              </div>
+              <div class="grid md:grid-cols-3 grid-cols-1 gap-8">
+                <div class="h-[277px] w-full rounded-3xl">
+                  <img
+                    src="src/img/blog-education.jpg"
+                    alt="Gallery image"
+                    class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-300 ease-in-out mx-auto w-full h-full"
+                  />
+                </div>
+                <div class="h-[277px] w-full rounded-3xl">
+                  <img
+                    src="src/img/blog-gamelle.jpg"
+                    alt="Gallery image"
+                    class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-300 ease-in-out mx-auto w-full h-full"
+                  />
+                </div>
+                <div class="h-[277px] w-full rounded-3xl">
+                  <img
+                    src="src/img/blog-proprete.jpg"
+                    alt="Gallery image"
+                    class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-300 ease-in-out mx-auto w-full h-full"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lightbox" id="lightbox">
+          <span class="close" id="close">&times;</span>
+          <img src="" alt="" class="lightbox-image" id="lightbox-image" />
+        </div>
+      </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer" class="mt-12"></footer>
     <script
       src="https://website-widgets.pages.dev/dist/sienna.min.js"
       defer
