Changement des liens pour qu'ils marchent bien sur Github Pages

--- a/article1.html
+++ b/article1.html
@@ -575,7 +575,7 @@
             </div>
           </div>
           <a
-            href="/blog.html"
+            href="blog.html"
             class="cursor-pointer bg-accent shadow-sm rounded-xl py-3.5 px-7 w-52 flex justify-center items-center text-bgColor font-semibold mx-auto transition-all duration-300 hover:bg-accentHover"
             >Tout Voir</a
           >
