--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                 <div
                   class="lg:w-96 w-auto h-auto rounded-xl bg-bgColor shadow-xl lg:p-6 p-4"
                 >
-                  <a href="/"
+                  <a href="index.html"
                     ><img
                       src="src/img/logo-black.svg"
                       width="200"
