--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           "
         >
           <a
-            href="/contact.html"
+            href="contact.html"
             class="flex items-center border border-body rounded-lg py-2 px-4 hover:bg-body text-body hover:text-accent text-sm mb-5 transition duration-300 ease-in-out"
           >
             Nous contacter
@@ -234,7 +234,7 @@
             </div>
           </div>
           <a
-            href="/blog.html"
+            href="blog.html"
             class="cursor-pointer bg-accent shadow-sm rounded-xl py-3.5 px-7 w-52 flex justify-center items-center text-bgColor font-semibold mx-auto transition-all duration-300 hover:bg-accentHover"
             >Tout Voir</a
           >
