Création de 3 articles de blog

--- a/article1.html
+++ b/article1.html
@@ -335,7 +335,7 @@
           </div>
           <div class="img w-full mb-32">
             <img
-              src="src/img/blog-article1.jpg"
+              src="src/img/blog-education.jpg"
               alt="Blog Article 1"
               class="object-cover rounded-2xl"
             />
@@ -587,12 +587,12 @@
       src="https://website-widgets.pages.dev/dist/sienna.min.js"
       defer
     ></script>
-    <script src="src/components/navbar.components.js"></script>
+    <script src="src/components/navbar.components.js" defer></script>
     <script src="src/components/warning.components.js"></script>
     <script src="src/components/footer.components.js"></script>
     <script src="src/components/swiper.components.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
-    <script type="module" src="src/js/routes.js"></script>
+    <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
