--- a/blog.html
+++ b/blog.html
@@ -27,48 +27,7 @@
       "
     ></div>
     <main>
-      <section id="hero" class="px-4 md:px-8 lg:px-12">
-        <div
-          class="flex flex-1 w-full flex-col items-center justify-center text-center px-4 py-20 rounded-xl h-[80vh]"
-          style="
-            background-image: url('src/img/gradient-hero.webp');
-            background-size: cover;
-            background-position: center;
-          "
-        >
-          <h1
-            class="mx-auto max-w-4xl font-display text-5xl font-bold tracking-normal text-body sm:text-7xl"
-          >
-            Découvrez tous <br />nos
-            <span class="relative whitespace-nowrap text-bgColor">
-              <svg
-                aria-hidden="true"
-                viewBox="0 0 418 42"
-                class="absolute top-2/3 left-0 h-[0.58em] w-full fill-primary"
-                preserveAspectRatio="none"
-              >
-                <path
-                  d="M203.371.916c-26.013-2.078-76.686 1.963-124.73 9.946L67.3 12.749C35.421 18.062 18.2 21.766 6.004 25.934 1.244 27.561.828 27.778.874 28.61c.07 1.214.828 1.121 9.595-1.176 9.072-2.377 17.15-3.92 39.246-7.496C123.565 7.986 157.869 4.492 195.942 5.046c7.461.108 19.25 1.696 19.17 2.582-.107 1.183-7.874 4.31-25.75 10.366-21.992 7.45-35.43 12.534-36.701 13.884-2.173 2.308-.202 4.407 4.442 4.734 2.654.187 3.263.157 15.593-.780 35.401-2.686 57.944-3.488 88.365-3.143 46.327.526 75.721 2.23 130.788 7.584 19.787 1.924 20.814 1.98 24.557 1.332l.066-.011c1.201-.203 1.53-1.825.399-2.335-2.911-1.31-4.893-1.604-22.048-3.261-57.509-5.556-87.871-7.36-132.059-7.842-23.239-.254-33.617-.116-50.627.674-11.629.540-42.371 2.494-46.696 2.967-2.359.259 8.133-3.625 26.504-9.810 23.239-7.825 27.934-10.149 28.304-14.005.417-4.348-3.529-6-16.878-7.066Z"
-                ></path>
-              </svg>
-              <span class="relative">conseils</span>
-            </span>
-          </h1>
-          <h2
-            class="mx-auto mt-12 max-w-xl text-lg sm:text-bodyGray text-bodyGray leading-7"
-          >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </h2>
-          <a
-            class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
-            href="#conseils"
-            >Découvrir</a
-          >
-        </div>
-      </section>
-
-      <section id="conseils" class="my-48">
+      <section id="conseils" class="py-24">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <h2 class="text-4xl font-bold text-body text-center mb-14">
             Nos conseils avant d'adopter
@@ -148,7 +107,7 @@
             class="flex justify-center mb-8 gap-y-8 lg:gap-y-0 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8"
           >
             <div
-              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative overflow-hidden"
             >
               <div class="flex items-center mb-6">
                 <img
@@ -166,16 +125,16 @@
                 </div>
               </div>
               <div
-                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+                class="absolute inset-0 bg-orange-50 bg-opacity-70 backdrop-blur-sm flex items-center justify-center rounded-2xl z-10"
               ></div>
               <span
-                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 z-20"
               >
                 Bientôt disponible
               </span>
             </div>
             <div
-              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative overflow-hidden"
             >
               <div class="flex items-center mb-6">
                 <img
@@ -193,16 +152,16 @@
                 </div>
               </div>
               <div
-                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+                class="absolute inset-0 bg-orange-50 bg-opacity-70 backdrop-blur-sm flex items-center justify-center rounded-2xl z-10"
               ></div>
               <span
-                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 z-20"
               >
                 Bientôt disponible
               </span>
             </div>
             <div
-              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative"
+              class="group w-full max-lg:max-w-xl lg:w-1/3 border border-bgColorHover rounded-2xl p-5 transition-all duration-300 hover:border-accent relative overflow-hidden"
             >
               <div class="flex items-center mb-6">
                 <img
@@ -220,10 +179,10 @@
                 </div>
               </div>
               <div
-                class="absolute inset-0 bg-orange-50 opacity-75 flex items-center justify-center rounded-2xl"
+                class="absolute inset-0 bg-orange-50 bg-opacity-70 backdrop-blur-sm flex items-center justify-center rounded-2xl z-10"
               ></div>
               <span
-                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 opacity-100"
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white text-primary font-medium rounded-lg px-4 py-1 z-20"
               >
                 Bientôt disponible
               </span>
@@ -243,6 +202,6 @@
     <script src="src/components/swiper.components.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
-    <script type="module" src="src/js/routes.js"></script>
+    <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
