Ajout d'un lien vers la page About

--- a/index.html
+++ b/index.html
@@ -146,13 +146,14 @@
                   </div>
                 </div>
               </div>
-              <button
+              <a
+                href="about.html"
                 class="sm:w-fit w-full px-3.5 py-2 bg-accent hover:bg-accentHover transition-all duration-700 ease-in-out rounded-lg shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] justify-center items-center flex"
               >
                 <span class="px-1.5 text-bgColor text-sm font-medium leading-6"
                   >À propos</span
                 >
-              </button>
+              </a>
             </div>
           </div>
         </div>
