--- a/pension.html
+++ b/pension.html
@@ -147,6 +147,6 @@
     <script src="src/components/swiper.components.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
-    <script type="module" src="src/js/routes.js"></script>
+    <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
