Changement des Lorem Ipsum

--- a/pension.html
+++ b/pension.html
@@ -57,8 +57,8 @@
           <h2
             class="mx-auto mt-12 max-w-xl text-lg sm:text-bodyGray text-bodyGray leading-7"
           >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            écouvrez l’univers chaleureux de notre pension, où chaque chiot
+            trouve confort et attention.
           </h2>
           <a
             class="bg-bgColor rounded-xl text-accent hover:text-bgColor font-medium px-4 py-3 sm:mt-10 mt-8 hover:bg-accent transition duration-300 ease-in-out"
