Ajout d'une animation d'entrée pour certains éléments et la navbar

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
@@ -20,14 +20,14 @@
     <div id="warning"></div>
     <div
       id="navbar"
-      style="
-        z-index: 1000 !important;
-        position: sticky !important;
-        top: 0 !important;
-      "
+      class="opacity-0 -translate-y-full"
+      style="z-index: 1000; position: sticky; top: 0"
     ></div>
     <main>
-      <section id="conseils" class="py-24">
+      <section
+        id="conseils"
+        class="py-24 opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+      >
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <h2 class="text-4xl font-bold text-body text-center mb-14">
             Nos conseils avant d'adopter
