--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
@@ -20,14 +20,13 @@
     <div id="warning"></div>
     <div
       id="navbar"
-      style="
-        z-index: 1000 !important;
-        position: sticky !important;
-        top: 0 !important;
-      "
+      class="opacity-0 -translate-y-full"
+      style="z-index: 1000; position: sticky; top: 0"
     ></div>
     <main>
-      <section class="py-14 lg:py-24 relative z-0 bg-bgColor">
+      <section
+        class="py-14 lg:py-24 relative z-0 bg-bgColor opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+      >
         <div
           class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative text-center"
         >
@@ -45,7 +44,9 @@
         </div>
       </section>
 
-      <section class="py-14 lg:py-24 relative">
+      <section
+        class="py-14 lg:py-24 relative opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+      >
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative">
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-9">
             <div class="img-box">
