--- a/article1.html
+++ b/article1.html
@@ -9,7 +9,7 @@
 
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
@@ -20,14 +20,14 @@
     <div id="warning"></div>
     <div
       id="navbar"
-      style="
-        z-index: 1000 !important;
-        position: sticky !important;
-        top: 0 !important;
-      "
+      class="opacity-0 -translate-y-full"
+      style="z-index: 1000; position: sticky; top: 0"
     ></div>
     <main>
-      <section id="hero" class="relative pt-20 pb-24 bg-primary">
+      <section
+        id="hero"
+        class="relative pt-20 pb-24 bg-primary opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+      >
         <div
           class="w-full max-w-lg md:max-w-2xl lg:max-w-4xl px-5 lg:px-11 mx-auto max-md:px-4"
         >
