--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div id="warning"></div>
     <div
       id="navbar"
-      style="
-        z-index: 1000 !important;
-        position: sticky !important;
-        top: 0 !important;
-      "
+      class="opacity-0 -translate-y-full"
+      style="z-index: 1000; position: sticky; top: 0"
     ></div>
     <main>
-      <section id="hero" class="px-4 md:px-8 lg:px-12">
+      <section
+        id="hero"
+        class="px-4 md:px-8 lg:px-12 opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+      >
         <div
           class="flex flex-1 w-full flex-col items-center justify-center text-center px-4 py-20 rounded-xl h-[80vh]"
           style="
