Ajout de meta description

--- a/article3.html
+++ b/article3.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shihtzu - Pension</title>
+    <title>Shihtzu - Gamelle en plastique ou en inox</title>
+    <meta
+      name="description"
+      content="Bienvenue dans notre élevage de chiots. Découvrez nos adorables chiots, leur environnement de vie, et obtenez des conseils pour les accueillir dans votre foyer."
+    />
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
-
     <link
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
