--- a/article2.html
+++ b/article2.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shihtzu - Pension</title>
+    <title>Shihtzu - Éducation à la propreté</title>
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
-
     <link
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
