--- a/pension.html
+++ b/pension.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shihtzu - Pension</title>
+    <meta
+      name="description"
+      content="Bienvenue dans notre élevage de chiots. Découvrez nos adorables chiots, leur environnement de vie, et obtenez des conseils pour les accueillir dans votre foyer."
+    />
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <script src="tailwind.config.js"></script>
     <script src="src/js/scroll.js"></script>
 
